# scrap-n-search

./: .gitignore  run.sh  url_cache.db
rewrite/: Cargo.toml
rewrite/src/: main.rs
svelte/: add_content.py  find.py  knowledge_base.db  loader.py  main.py  scraper.py  test_db.py  url.py  urls.json  urls.txt
svelte/templates/: index.html
